--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,7 @@ crossorigin="anonymous"
               Technology
             </h2>
             <div class="d-flex">
-              <a href="#" class="btn btn-primary btn-lg scrollto">CONTACT US</a>
+              <a href="/contact_us" class="btn btn-primary btn-lg scrollto">CONTACT US</a>
               <a
                 class="btn btn-lg btn-new-member"
                 ><i class="bi bi-person-plus-fill"></i> New Member</a>
@@ -229,7 +229,7 @@ crossorigin="anonymous"
             <div class="swiper-pagination"></div>
           </div>
           <div class="blog-btn">
-          <a href="" class="btn btn-outline-primary btn-lg">View More</a>
+          <a href="/blogs" class="btn btn-outline-primary btn-lg">View More</a>
         </div>
         </div>
       
