Fixed bootstrap bugs with mobile responsivness

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -204,7 +204,7 @@ crossorigin="anonymous"
             <div class="swiper-wrapper">
               <% blog.forEach(function(blog) { %>
                 <div class="swiper-slide">
-                  <div class="testimonial-item  h-100">
+                  <div class="testimonial-item h-100 d-flex justify-content-center">
                     <div class="card h-100 ">
                       <img
                       src="data:image/<%=blog.image.img.contentType%>;base64,
