added google authentication

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -737,9 +737,10 @@ section {
 /*--------------------------------------------------------------
 # Event
 --------------------------------------------------------------*/
-
-.event .section-title span {
-  line-height: 1;
+@media (max-width: 1239px) {
+  .event .section-title span {
+    display: none;
+  }
 }
 
 .event .card {
@@ -889,44 +890,42 @@ section {
   }
 }
 
-
 /* contact_us page */
-.contact_details .card{
+.contact_details .card {
   margin-bottom: 1rem;
 }
 
-.contact_details input{
+.contact_details input {
   margin-bottom: 1rem;
 }
 
-.contact_details textarea{
+.contact_details textarea {
   margin-bottom: 1rem;
 }
 
-.messenger-icons .fa-whatsapp{
+.messenger-icons .fa-whatsapp {
   color: #25d366;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
-.messenger-icons .fa-whatsapp:hover{
+.messenger-icons .fa-whatsapp:hover {
   transform: scale(1.2);
 }
 
-.messenger-icons .fa-facebook-messenger{
+.messenger-icons .fa-facebook-messenger {
   color: #0084ff;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
-.messenger-icons .fa-facebook-messenger:hover{
+.messenger-icons .fa-facebook-messenger:hover {
   transform: scale(1.2);
 }
-.messenger-icons .fa-viber{
+.messenger-icons .fa-viber {
   color: #8f5db7;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
-.messenger-icons .fa-viber:hover{
+.messenger-icons .fa-viber:hover {
   transform: scale(1.2);
 }
- 
-.messenger-icons .fab{
+
+.messenger-icons .fab {
   margin-right: 1rem;
 }
-
