--- a/views/login.ejs
+++ b/views/login.ejs
@@ -60,7 +60,7 @@
                   ><img
                     src="https://img.icons8.com/color/16/000000/google-logo.png"
                   />
-                  Signup Using Google</a
+                  Login Using Google</a
                 >
               </div>
             </div>
