--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -183,7 +183,7 @@ crossorigin="anonymous"
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js' type='text/javascript'></script>`
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
@@ -213,8 +213,8 @@ var loadMore = true;
         
  
  // tell the method and URL of request
-//  ajax.open("POST", "http://localhost:3000/blogs", true);
- ajax.open("POST", "https://sliitmcc.herokuapp.com/blogs", true);
+ ajax.open("POST", "http://localhost:3000/blogs", true);
+//  ajax.open("POST", "https://sliitmcc.herokuapp.com/blogs", true);
 
 
  // Detecting request state change
