--- a/views/index.ejs
+++ b/views/index.ejs
@@ -322,7 +322,7 @@ crossorigin="anonymous"
             </div>
           </div>
           <div class="blog-btn">
-            <a href="" class="btn btn-outline-primary btn-lg">View More</a>
+            <a href="/events" class="btn btn-outline-primary btn-lg">View More</a>
           </div>
         </div>
       </section>
