--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -20,98 +20,226 @@
       crossorigin="anonymous"
     ></script>
 
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
+    <!-- Datepicker -->
 
-      body {
-        display: -ms-flexbox;
-        display: -webkit-box;
-        display: flex;
-        -ms-flex-align: center;
-        -ms-flex-pack: center;
-        -webkit-box-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        justify-content: center;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #fff;
-      }
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"
+    />
 
-      .form-signin h1 {
-        text-align: center;
-        padding-bottom: 20px;
-      }
+    <!-- jQuery -->
 
-      .form-signin {
-        width: 100%;
-        max-width: 500px;
-        padding: 15px;
-        margin: 0 auto;
-      }
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.11.3.min.js"
+    ></script>
 
-      .form-signin .form-control {
-        position: relative;
-        box-sizing: border-box;
-        height: auto;
-        padding: 10px;
-        font-size: 16px;
-      }
-      .form-signin .form-control:focus {
-        z-index: 2;
-      }
-
-      .form-signin .btn {
-        margin-top: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <form action="/compose" method="post" class="form-signin">
-        <div class="form-group">
-          <h1>UPLOAD NEW BLOGS</h1>
-          <label for="title">Title:</label>
-          <input type="text" name="title" class="form-control" required />
-        </div>
-        <div class="form-group">
-          <label for="title">Medium URL:</label>
-          <input
-            type="url"
-            name="url"
-            placeholder="ex:- https://medium.com"
-            pattern="https://.*"
-            class="form-control"
-            required
-          />
-        </div>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link active"
+          id="blog-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#blog"
+          type="button"
+          role="tab"
+          aria-controls="blog"
+          aria-selected="true"
+        >
+          Blogs
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button
+          class="nav-link"
+          id="profile-tab"
+          data-bs-toggle="tab"
+          data-bs-target="#profile"
+          type="button"
+          role="tab"
+          aria-controls="profile"
+          aria-selected="false"
+        >
+          Events
+        </button>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div
+        class="tab-pane fade show active"
+        id="blog"
+        role="tabpanel"
+        aria-labelledby="blog-tab"
+      >
+        <div class="container">
+          <form action="/compose" method="post" class="form-signin">
+            <div class="form-group">
+              <h1>UPLOAD NEW BLOGS</h1>
+              <label for="title">Title:</label>
+              <input type="text" name="title" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label for="title">Medium URL:</label>
+              <input
+                type="url"
+                name="url"
+                placeholder="ex:- https://medium.com"
+                pattern="https://.*"
+                class="form-control"
+                required
+              />
+            </div>
 
-        <div class="form-group">
-          <label for="image">Upload Thumbnail URL:</label>
-          <input
-            type="url"
-            name="image"
-            placeholder="ex:- https://image.com"
-            pattern="https://.*"
-            class="form-control"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="content">Content:</label>
-          <textarea
-            name="content"
-            class="form-control"
-            style="height: 300px"
-            required
-          ></textarea>
-        </div>
+            <div class="form-group">
+              <label for="image">Upload Thumbnail URL:</label>
+              <input
+                type="url"
+                name="image"
+                placeholder="ex:- https://image.com"
+                pattern="https://.*"
+                class="form-control"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="content">Content:</label>
+              <textarea
+                name="content"
+                class="form-control"
+                style="height: 300px"
+                required
+              ></textarea>
+            </div>
 
-        <button type="submit" class="btn btn-primary w-100">ADD</button>
-      </form>
+            <button
+              type="submit"
+              name="submit"
+              value="blogs"
+              class="btn btn-primary w-100"
+            >
+              ADD
+            </button>
+          </form>
+        </div>
+      </div>
+      <div
+        class="tab-pane fade"
+        id="profile"
+        role="tabpanel"
+        aria-labelledby="profile-tab"
+      >
+        <div class="container">
+          <form action="/compose" method="post" class="form-signin">
+            <div class="form-group">
+              <h1>UPLOAD UPCOMING EVENTS</h1>
+              <label for="title">Title:</label>
+              <input type="text" name="title" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label for="content">Content:</label>
+              <textarea
+                name="content"
+                class="form-control"
+                style="height: 300px"
+                required
+              ></textarea>
+            </div>
+
+            <div class="form-group">
+              <label for="image">Location:</label>
+              <input
+                type="text"
+                name="location"
+                class="form-control"
+                required
+              />
+            </div>
+
+            <div class="row"> 
+              <div class="col-lg-6 col-sm-6 col-xs-6">
+                <div class="form-group mt-2">
+                  <select
+                    class="form-select"
+                    aria-label="Default select example"
+                    name="date"
+                    required
+                  >
+                    <% for ( var i = 1; i <= 30; i++ ) { %> <%if(i > 0 && i < 10 ){%>
+                    <option  value="0<%= i  %>">0<%= i %></option>
+                    <%}else{%>
+                    <option  value="<%= i  %>"><%= i %></option>
+                    <%}%> <%} %>
+                  </select>
+                  </div>
+              </div>
+              <div class="col-lg-6 col-sm-6 col-xs-6">
+                <div class="form-group mt-2">
+                  <select
+                  class="form-select"
+                  aria-label="Default select example"
+                  name="month"
+                  required
+                >
+                  <% var months = ["JAN","FEB", "MAR", "APR", "MAY" , "JUN", "JUL","AUG","SEP","OCT", "NOV","DEC"]%>
+                  <% for ( var i = 0; i < months.length ; i++ ) { %> 
+      
+                  <option  value="<%= months[i]  %>"><%= months[i] %></option>
+              
+                  <%}%> 
+                </select>
+                </div>
+              </div>
+            </div>
+            <div class="form-group mt-2">
+              <label for="time">Time: </label>
+              <input type="text" class="form-control" name="time" id="" placeholder="10:00 P.M.">
+              </div>
+             
+   
+
+
+            <div class="form-group">
+              <label for="title">URL:</label>
+              <input
+                type="url"
+                name="url"
+                placeholder="ex:- https://facebook.com"
+                pattern="https://.*"
+                class="form-control"
+                required
+              />
+            </div>
+
+            <div class="form-group">
+              <label for="image">Upload Image URL:</label>
+              <input
+                type="url"
+                name="image"
+                placeholder="ex:- https://image.com"
+                pattern="https://.*"
+                class="form-control"
+                required
+              />
+            </div>
+
+            <button
+              type="submit"
+              name="submit"
+              value="events"
+              class="btn btn-primary w-100"
+            >
+              ADD
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
