--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -129,6 +129,9 @@
           </form>
         </div>
       </div>
+
+      //events
+
       <div
         class="tab-pane fade"
         id="profile"
@@ -162,48 +165,21 @@
               />
             </div>
 
-            <div class="row"> 
-              <div class="col-lg-6 col-sm-6 col-xs-6">
-                <div class="form-group mt-2">
-                  <select
-                    class="form-select"
-                    aria-label="Default select example"
-                    name="date"
-                    required
-                  >
-                    <% for ( var i = 1; i <= 30; i++ ) { %> <%if(i > 0 && i < 10 ){%>
-                    <option  value="0<%= i  %>">0<%= i %></option>
-                    <%}else{%>
-                    <option  value="<%= i  %>"><%= i %></option>
-                    <%}%> <%} %>
-                  </select>
-                  </div>
-              </div>
-              <div class="col-lg-6 col-sm-6 col-xs-6">
-                <div class="form-group mt-2">
-                  <select
-                  class="form-select"
-                  aria-label="Default select example"
-                  name="month"
-                  required
-                >
-                  <% var months = ["JAN","FEB", "MAR", "APR", "MAY" , "JUN", "JUL","AUG","SEP","OCT", "NOV","DEC"]%>
-                  <% for ( var i = 0; i < months.length ; i++ ) { %> 
-      
-                  <option  value="<%= months[i]  %>"><%= months[i] %></option>
-              
-                  <%}%> 
-                </select>
-                </div>
-              </div>
+            <div class="form-group mt2">
+              <label for="date">Date : </label>
+              <input type="date" class="form-control" name="date" id="" />
             </div>
+
             <div class="form-group mt-2">
               <label for="time">Time: </label>
-              <input type="text" class="form-control" name="time" id="" placeholder="10:00 P.M.">
-              </div>
-             
-   
-
+              <input
+                type="text"
+                class="form-control"
+                name="time"
+                id=""
+                placeholder="10:00 P.M."
+              />
+            </div>
 
             <div class="form-group">
               <label for="title">URL:</label>
