--- a/views/events.ejs
+++ b/views/events.ejs
@@ -109,8 +109,8 @@ crossorigin="anonymous"
       <section id="events-card" class="event section-bg">
         <div class="container-fluid">
           <div class="section-title">
-            <span>Check out our Upcoming Events!</span>
-            <h2>Check out our Upcoming Events!</h2>
+            <span>Check out our Events and Webinars!</span>
+            <h2>Check out our Events and Webinars!</h2>
   
           </div>
 
@@ -122,7 +122,7 @@ crossorigin="anonymous"
                       <img src="<%=event.img%>" class="card-img-top" alt="..." />
                       <div class="card-body d-flex flex-column">
                         <h5 class="card-title"><%=event.title%></h5>
-                        <small class="mb-2 text-muted"><i class="bi bi-geo-alt-fill"></i> <%=event.location%> &nbsp;<i class="bi bi-calendar"></i> <%=event.date%> &nbsp;<i class="bi bi-alarm"></i> <%=event.time%> &nbsp;</small>
+                        <small class="mb-2 text-muted"><i class="bi bi-geo-alt-fill"></i> <%=event.location%> &nbsp; <i class="bi bi-calendar"></i> <%=event.date%> &nbsp; <i class="bi bi-alarm"></i> <%=event.time%> &nbsp; </small>
                         <p class="card-text"><%=event.description%></p>
                         <a href="<%=event.url%>" class="btn-flash-border-primary mt-auto">View more!</a>
                       </div>
