--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
   <!-- Favicons -->
   <link href="assets/img/Mozilla_Firefox_icon-icons.com_66770.ico" rel="icon" />
   <link href="assets/img/Mozilla_Firefox_icon-icons.com_66770.ico" rel="apple-touch-icon" />
+  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
@@ -36,6 +37,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -229,8 +231,8 @@
     <section id="events-card" class="event section-bg">
       <div class="container-fluid">
         <div class="section-title">
-          <span>Check out our Upcoming Events!</span>
-          <h2>Check out our Upcoming Events!</h2>
+          <span>Check out our Events and Webinars!</span>
+          <h2>Check out our Events and Webinars!</h2>
 
 
           <div class="card-group">
@@ -243,7 +245,6 @@
                       <div class="card-body d-flex flex-column">
                         <h5 class="card-title"><%=event.title%></h5>
                         <small class="mb-2 text-muted"><i class="bi bi-geo-alt-fill"></i> <%=event.location%> &nbsp;<i class="bi bi-calendar"></i> <%=event.date%> &nbsp;<i class="bi bi-alarm"></i> <%=event.time%> &nbsp;</small>
-                        <p class="card-text"><%=event.description%></p>
                         <a href="<%=event.url%>" class="btn-flash-border-primary mt-auto">View more!</a>
                       </div>
                     </div>
@@ -265,35 +266,29 @@
     <section id="team">
       <div class="container-fluid">
         <h1 class="team-title">Members Who Work Together!</h1>
-        <div class="team-slider">
 
-          <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-            <div class="carousel-inner">
-              <div class="carousel-item active container-fluid">
-                <img class="testimonial-img d-block mx-auto" src="./assets/img/team/Geethmaka Ayya.jpg" alt="dog-profile">
-                <em>Geethmaka Dissanayake</em>
-                <h4>PRESIDENT</h4>
-              </div>
-              <div class="carousel-item container-fluid">
-                <img class="testimonial-img d-block mx-auto" src="./assets/img/team/Geethmaka Ayya.jpg" alt="lady-profile">
-                <em>Pasindy Bandara</em>
-                <h4>VICE PRESIDENT</h4>
-              </div>
-              <div class="carousel-item container-fluid">
-                <img class="testimonial-img d-block mx-auto" src="./assets/img/team/Geethmaka Ayya.jpg" alt="lady-profile">
-                <em>Chamathka Ariyarathne</em>
-                <h4>SECRETARY</h4>
+        <div class="swiper team-slider">
+          <div class="swiper-wrapper">
+
+            <% committee.forEach(member => { %>
+            <div class="swiper-slide">
+              <img src="<%= member.img %>" class="card-img-top team-img" alt=""/>
+              <div class="card team-card h-100">
+                <div class="card-body">
+                  <h5 class="card-title"><%=member.position%></h5>
+                  <p class="card-text">
+                    <%= member.name%>
+                  </p>
+                </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+            <%}); %>
+          
           </div>
+          <!-- <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div> -->
+        </div>
+               
         </div>
       </div>
     </section>
@@ -336,12 +331,15 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
+
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
