--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,226 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+<%- include("header") -%>
 
-    <title>Mozilla Campus Club of SLIIT</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
-
-    <!-- Favicons -->
-    <link href="assets/img/Mozilla_Firefox_icon-icons.com_66770.ico" rel="icon" />
-    <link href="assets/img/Mozilla_Firefox_icon-icons.com_66770.ico" rel="apple-touch-icon" />
-
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet"
-    />
-
-<!-- Bootstrap -->
-<link
-href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-rel="stylesheet"
-integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-crossorigin="anonymous"
-/>
-
-<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-crossorigin="anonymous"
-></script>
-
-    <!-- Vendor CSS Files -->
-  
-    <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
-    <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
-  </head>
-
-  <body>
-    <!-- ======= Header ======= -->
-        <!-- ======= Header ======= -->
-        <header id="header" class="fixed-top">
-          <div class="container-fluid  ">
-    
-            <nav id="navbar" class="navbar navbar-expand-lg  bg-Secondary">
-              <a href="/" class="logo navbar-brand"
-                ><img src="assets/img/logo.png" alt="" class="img-fluid" /> Mozilla
-                Campus Club - SLIIT</a
-              >
-              <ul class="ms-auto">
-                <li><a class="nav-link scrollto" href="/">Home</a></li>
-                <li><a class="nav-link scrollto" href="/#about">About</a></li>
-                <li><a class="nav-link scrollto" href="/blog">Blogs</a></li>
-                <li>
-                  <a class="nav-link scrollto active" href="/#event">Events</a>
-                </li>
-                <li><a class="nav-link scrollto" href="/contact_us">Contact Us</a></li>
-               
-                  </ul>
-                </li>           
-              </ul>
-    
-              
-              <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav>
-            <!-- .navbar -->
-          </div>
-        </header>
-        <!-- End Header -->
-    
-    
-        <section id="hero" class="d-flex align-items-center">
-          <div class="container-fluid">
-            <div class="row">
-              <div
-                class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
-              >
-                <h1>Events</h1>
-                <h2>
-                   Leran from the experts. Join our events. We guarantee that your time is not wasted.
-                </h2>
-              </div>
-              <div class="col-lg-6 order-1 order-lg-2 mx-auto hero-img">
-                <img src="assets/img/Webinar.gif" class=" img-fluid float-end hero-img hero-desktop" alt="" />
-                <img src="assets/img/Webinar.gif" class=" img-fluid mx-auto hero-img hero-mobile" alt="" />
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- End Hero -->
-
-    <main id="main">
-
-      <section id="events-card" class="event section-bg">
-        <div class="container-fluid">
-          <div class="section-title">
-            <span>Check out our Events and Webinars!</span>
-            <h2>Check out our Events and Webinars!</h2>
-  
-          </div>
-
-            <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
-              <% eventsData.forEach(event => { %>
-                <div class="col">
-                <div class="swiper-slide">
-                    <div class="card h-100 ">
-                      <img src="<%=event.img%>" class="card-img-top" alt="..." />
-                      <div class="card-body d-flex flex-column">
-                        <h5 class="card-title"><%=event.title%></h5>
-                        <small class="mb-2 text-muted"><i class="bi bi-geo-alt-fill"></i> <%=event.location%> &nbsp; <i class="bi bi-calendar"></i> <%=event.date%> &nbsp; <i class="bi bi-alarm"></i> <%=event.time%> &nbsp; </small>
-                        <p class="card-text"><%=event.description%></p>
-                        <a href="<%=event.url%>" class="btn-flash-border-primary mt-auto">View more!</a>
-                      </div>
-                    </div>
-                </div>
-              </div>
-                <% }); %>
-            </div>
-          <div class="blog-btn">
-            <a href="/events" class="btn btn-outline-primary btn-lg">View More</a>
-          </div>
-        </div>
-      </section>
-    </main>
-    <!-- End #main -->
-
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-      <div class="footer-top">
-        <div class="container-fluid">
-          <div class="row justify-content-center">
-            <div class="col-lg-6">
-              <h3>Subscribe</h3>
-              <p>
-                Subscribe to stay in toch with our latest bllogs, events and more!
-              </p>
-            </div>
-          </div>
-
-          <div class="row footer-newsletter justify-content-center">
-            <div class="col-lg-6">
-              <form action="" method="post">
-                <input type="email" name="email" placeholder="Enter your Email"><input type="submit" name="submit" value="Subscribe">
-              </form>
-              </form>
-            </div>
-          </div>
-
-          <div class="social-links">
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          </div>
-        </div>
+<section id="hero" class="d-flex align-items-center">
+  <div class="container-fluid">
+    <div class="row">
+      <div
+        class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
+      >
+        <h1>Events</h1>
+        <h2>
+          Leran from the experts. Join our events. We guarantee that your time
+          is not wasted.
+        </h2>
       </div>
-    </footer>
-    <!-- End Footer -->
+      <div class="col-lg-6 order-1 order-lg-2 mx-auto hero-img">
+        <img
+          src="assets/img/Webinar.gif"
+          class="img-fluid float-end hero-img hero-desktop"
+          alt=""
+        />
+        <img
+          src="assets/img/Webinar.gif"
+          class="img-fluid mx-auto hero-img hero-mobile"
+          alt=""
+        />
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Hero -->
 
-    <a
-      href="#"
-      class="back-to-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i></a>
+<main id="main">
+  <section id="events-card" class="event section-bg">
+    <div class="container-fluid">
+      <div class="section-title">
+        <span>Check out our Events and Webinars!</span>
+        <h2>Check out our Events and Webinars!</h2>
+      </div>
 
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+      <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
+        <% eventsData.forEach(event => { %>
+        <div class="col">
+          <div class="swiper-slide">
+            <div class="card h-100">
+              <img src="<%=event.img%>" class="card-img-top" alt="..." />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title"><%=event.title%></h5>
+                <small class="mb-2 text-muted"
+                  ><i class="bi bi-geo-alt-fill"></i> <%=event.location%> &nbsp;
+                  <i class="bi bi-calendar"></i> <%=event.date%> &nbsp;
+                  <i class="bi bi-alarm"></i> <%=event.time%> &nbsp;
+                </small>
+                <p class="card-text"><%=event.description%></p>
+                <a
+                  href="<%=event.url%>"
+                  class="btn-flash-border-primary mt-auto"
+                  >View more!</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <% }); %>
+      </div>
+      <div class="blog-btn">
+        <a href="/events" class="btn btn-outline-primary btn-lg">View More</a>
+      </div>
+    </div>
+  </section>
+</main>
+<!-- End #main -->
 
-    <!-- Template Main JS File -->
-    <script>
-            fetch("/data/events")
-            .then(function (response) {
-              return response.json();
-            })
-            .then(function (data) {
-              appendData(data);
-            })
-            .catch(function (err) {
-              console.log(err);
-            });
-
-            function appendData(data) {
-            var mainContainer = document.getElementById("card-area");
-            
-            for (var i = 0; i < data.length; i++) {
-                
-                var card = document.createElement("div");
-
-                card.className = "col-lg-4 col-md-4 d-flex justify-content-center align-items-stretch";
-                card.innerHTML = `
-                <div class="card" style="width: 20rem; margin-bottom: 2rem">
-                <div class="card-img">
-                    <img src="${data[i].image}" alt="Image" class="img-fluid card-img-top">
-                </div>
-                <div class="card-body">
-                    <h3 class="card-title">${data[i].blog_title}</h3>
-                    <p class="card-text">${data[i].description}</p>
-                    <a href="${data[i].link}" class="readmore">Read More</a>
-                </div>
-                </div>`;
-
-                mainContainer.appendChild(card);
-            }
-        }
-    </script>
-    <script src="assets/js/main.js"></script>
-    <script type="text/javascript"></script>
-  </body>
-</html>
+<%- include("footer") -%>
