--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,74 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="utf-8" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <meta name="keywords" content="SLIIT, SLIIT MOZILLA Community, SLIIT MOZILLA, Sri Lanka Institute of Information Technology, mozilla campus club in Sri Lanka" />
-  <meta name="description" content="SLIIT MOZILLA Community. Firefox Student Ambassadors of Sri Lanka Institute of Information Technology" />
-  <meta property="og:url" content="https://sliitmcc.herokuapp.com/" />
-  <meta property="og:description" content="SLIIT MOZILLA Community. Firefox Student Ambassadors of Sri Lanka Institute of Information Technology" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="SLIIT MOZILLA Community" />
-
-
-  <title>Mozilla Campus Club of SLIIT</title>
-
-
-  <!-- Favicons -->
-  <link href="assets/img/Mozilla_Firefox_icon-icons.com_66770.ico" rel="icon" />
-  <link href="assets/img/Mozilla_Firefox_icon-icons.com_66770.ico" rel="apple-touch-icon" />
-  
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
-
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
-  <!-- Vendor CSS Files -->
-
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet" />
-
-</head>
-
-<body>
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
-    <div class="container-fluid  ">
-
-      <nav id="navbar" class="navbar navbar-expand-lg  bg-Secondary">
-        <a href="/" class="logo navbar-brand"><img src="assets/img/logo.png" alt="" class="img-fluid" /> Mozilla
-          Campus Club - SLIIT</a>
-        <ul class="ms-auto">
-          <li><a class="nav-link scrollto active" href="#header">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#testimonials">Blogs</a></li>
-          <li>
-            <a class="nav-link scrollto" href="#event">Events</a>
-          </li>
-          <li><a class="nav-link scrollto" href="#">Contact Us</a></li>
-
-        </ul>
-        </li>
-        </ul>
-
-
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-      <!-- .navbar -->
-    </div>
-  </header>
-  <!-- End Header -->
-
+<%- include("header") -%>
 
   <section id="hero" class="d-flex align-items-center">
     <div class="container-fluid">
@@ -267,12 +198,14 @@
       <div class="container-fluid">
         <h1 class="team-title">Members Who Work Together!</h1>
 
+        <div class="container">
+
         <div class="swiper team-slider">
           <div class="swiper-wrapper">
 
             <% committee.forEach(member => { %>
             <div class="swiper-slide">
-              <img src="<%= member.img %>" class="card-img-top team-img" alt=""/>
+              <img src="<%= member.img %>" class="team-img" alt=""/>
               <div class="card team-card h-100">
                 <div class="card-body">
                   <h5 class="card-title"><%=member.position%></h5>
@@ -288,6 +221,7 @@
           <!-- <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div> -->
         </div>
+      </div>
                
         </div>
       </div>
@@ -295,54 +229,4 @@
   </main>
   <!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="footer-top">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <h3>Subscribe</h3>
-            <p>
-              Subscribe to stay in toch with our latest bllogs, events and more!
-            </p>
-          </div>
-        </div>
-
-        <div class="row footer-newsletter justify-content-center">
-          <div class="col-lg-6">
-            <form action="/" method="post">
-              <input type="email" name="email" placeholder="Enter your Email"><input type="submit" name="submit" value="Subscribe">
-            </form>
-            <!-- <div class="alert-box ">
-              Succesfully Subscribed!  <span class="float-end alert-closing" style="padding-right: 15px; ">X</span>
-              </div> -->
-          </div>
-        </div>
-
-        <div class="social-links">
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- End Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-</body>
-
-</html>
+  <%- include("footer") -%>
